# tf-peek

./: .coverage  .editorconfig  .editorconfig-checker.json  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .mise.toml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Makefile  README.md  config.toml  coverage.xml  index.html  mkdocs.yml  objects.inv  poe_tasks.toml  pyproject.toml  sitemap.xml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-checks.yaml  code_checks.yml  publish_docs.yaml  workflows-checks.yaml
architecture/: index.html
architecture/01-architecture-overview/: index.html
architecture/02-external-services/: index.html
architecture/03-endpoints-and-dependencies/: index.html
architecture/04-data-models/: index.html
docs/: README.md  index.md
docs/architecture/: 01-architecture-overview.md  02-external-services.md  03-endpoints-and-dependencies.md  04-data-models.md  README.md
docs/explanation/: resource-tiers.md
docs/how-to/: flag-critical-resources.md  generate-a-report.md  install.md  silence-noisy-resources.md
docs/reference/: cli.md  configuration.md
docs/tutorial/: first-report.md
explanation/resource-tiers/: index.html
how-to/flag-critical-resources/: index.html
how-to/generate-a-report/: index.html
how-to/install/: index.html
how-to/silence-noisy-resources/: index.html
openspec/changes/archive/2026-03-07-resource-tiers/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-07-resource-tiers/specs/resource-tier-config/: spec.md
openspec/specs/critical-section-rendering/: spec.md
openspec/specs/match-resolution/: spec.md
openspec/specs/resource-tier-config/: spec.md
openspec/specs/silent-disclosure/: spec.md
openspec/specs/tiered-summary-counts/: spec.md
reference/cli/: index.html
reference/configuration/: index.html
search/: search_index.json
src/tf_peek/: __init__.py  config.py  main.py  models.py
src/tf_peek/templates/: report.md.j2
tests/: test_config.py  test_main.py  test_models.py
tutorial/first-report/: index.html
